# Fly-In

./: Makefile  pyproject.toml
sharpy/: window_base
src/: InitialDisplay.py  __main__.py  map_parser.py
src/drone/: cells.py  drones.py
src/motor/: Color.py  Scene.py  __init__.py  screen_manager.py
src/motor/Instances/: Instance.py  __init__.py  square.py
src/motor/Settings/: keybinds.json
