[project]
name = "Fly-In"
version = "0.1.0"
description = "Fly in"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "mypy",
    "pygame"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"] 

[[tool.mypy.overrides]]
module = "llmm_sdk.*"
ignore_errors = true
